# agent_incentives

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
agent_incentives/: hooks.py  modules.txt
agent_incentives/agent_incentives/: __init__.py
agent_incentives/agent_incentives/doctype/agent_incentive_ledger/: agent_incentive_ledger.json  agent_incentive_ledger.py
agent_incentives/agent_incentives/doctype/agent_incentive_plan/: agent_incentive_plan.json  agent_incentive_plan.py
agent_incentives/agent_incentives/doctype/agent_incentive_run/: agent_incentive_run.json  agent_incentive_run.py
agent_incentives/agent_incentives/doctype/agent_incentive_settings/: agent_incentive_settings.json  agent_incentive_settings.py
agent_incentives/api/: formulas.py  setup.py
agent_incentives/config/: desktop.py
agent_incentives/services/: attribution.py  calculation.py  plans.py  queries.py  run_manager.py
agent_incentives/workspace/incentives/: incentives.json
docs/: ARCHITECTURE.md  INSTALL.md  PLUG_AND_PLAY_STATUS.md  SMOKE_TEST.md
