[project]
name = "agent_incentives"
version = "0.0.1"
description = "Agent incentive engine scaffold for SRIAAS"
authors = [
    {name = "Admin", email = "admin@example.com"}
]

requires-python = ">=3.10"

dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"